--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prisma": "^5.12.1"
+    "prisma": "^5.12.1",
+    "typeorm": "^0.3.20"
   }
 }
