--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -10,7 +10,5 @@ notificationList:
   # GitHub username or team name
   - '@DryRunSec/security'
   # - '@john-doe'
-questions:
-  - 'Does this PR include an personal identifiable information (PII)?'
-codeQuestions:
+summaryQuestions:
   - 'Does this PR change the encryption of sensitive data?'
