--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -12,3 +12,5 @@ notificationList:
   # - '@john-doe'
 summaryQuestions:
   - 'Does this PR change the encryption of sensitive data?'
+codeQuestions:
+  - 'Does this PR change anything related to authorization or authentication?'
